fix: `@transactional` to result save